@@ -1,4 +1,10 @@
-2013-04-02  Jeremy Bennett <jeremy.bennett@embecosm.com>
+2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* run-tests.sh: Add --multilib-options and --little-endian
+	* run-elf32-tests.sh, run-uclibc-tests.sh: Add comment regarding
+	the ARC_MULTILIB_OPTIONS environment variable.
+
+2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* arc-sim-mdb.exp: Deleted.
 	* arc-sim-base.exp: Merged into arc-sim.exp
